--- a/Foodie/User/User.Master
+++ b/Foodie/User/User.Master
@@ -69,10 +69,13 @@
                                     <a class="nav-link" href="Contact.aspx">BookTable</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Login.aspx">Login</a>
+                                    <%-- <a class="nav-link" href="Login.aspx">Login</a>--%>
+                                    <asp:LinkButton ID="lbLoginorLogout" runat="server" class="nav-link" OnClick="lbLoginorLogout_Click1"></asp:LinkButton>
+
+                                   
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Registration.aspx">Registration</a>
+                                     <a class="nav-link" href="Registration.aspx">Registration</a>
                                 </li>
                             </ul>
                             <div class="user_option">
@@ -142,9 +145,9 @@
                                 </div>
                                 <%--<a href="" class="order_online">
                                     Oreder Online
-                                </a>   --%> 
-<%--                                <asp:LinkButton ID="lbLoginOrLogout" runat="server" CssClass="order_online" CausesValidation="false"  OnClick="lbLoginOrLogout_Click"></asp:LinkButton>--%>
-                        </div>
+                                </a>   --%>
+                                <%--                                <asp:LinkButton ID="lbLoginOrLogout" runat="server" CssClass="order_online" CausesValidation="false"  OnClick="lbLoginOrLogout_Click"></asp:LinkButton>--%>
+                            </div>
                     </nav>
                 </div>
             </header>
