--- a/Foodie/Admin/OnlineFoodMaster.Master
+++ b/Foodie/Admin/OnlineFoodMaster.Master
@@ -209,7 +209,7 @@ body {
                     <div class="logout_btn">
 <%--                        <asp:LinkButton ID="btnLogOut" runat="server" CausesValidation="false" OnClick="btnLogOut_Click">Logout</asp:LinkButton>--%>
 
-                        <asp:LinkButton ID="btnLogOut" runat="server">Logout</asp:LinkButton>
+                        <asp:LinkButton ID="btnLogOut" runat="server" CausesValidation="false" OnClick="btnLogOut_Click">Logout</asp:LinkButton>
                     </div>
 
                    
